--- a/app/views/privatepowerqualitymonitoring.scala.html
+++ b/app/views/privatepowerqualitymonitoring.scala.html
@@ -17,6 +17,13 @@
     Copyright 2013 Anthony Christe
 *@
 
+@(alerts: List[Alert])
+
+@import helper._
+  @implicitFieldConstructor = @{
+    FieldConstructor(twitterBootstrapInput.render)
+  }
+
 @main("Private Power Quality Monitoring", menu("Private Power Quality Monitoring", false)) {
     <div class="row">
         <div class="span3">
@@ -99,55 +106,25 @@
             <table class="table table-striped table-bordered">
                 <thead>
                     <tr>
-                        <th>Date</th>
-                        <th>Time</th>
-                        <th>Duration</th>
-                        <th>Device</th>
+                        <th>Device Id</th>
+                        <th>Description</th>
                         <th>Alert Type</th>
-                        <th>Details</th>
+                        <th>Timestamp</th>
+                        <th>Duration (ms)</th>
+                        <th>Alert Value</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>05-23-2013</td>
-                        <td>11:53:03</td>
-                        <td>1.2 s</td>
-                        <td>0123-4567-89AB-CDEF (Home)</td>
-                        <td>
-                            <a class="btn btn-block btn-info btn-mini">Frequency</a>
-                        </td>
-                        <td>58 Hz (-2 Hz)</td>
-                    </tr>
-                    <tr>
-                        <td>05-23-2013</td>
-                        <td>15:00:22</td>
-                        <td>0.56 s</td>
-                        <td>0123-4567-89AB-CDEF (Home)</td>
-                        <td>
-                            <a class="btn btn-block btn-danger btn-mini">Voltage</a>
-                        </td>
-                        <td>218.3 V (-1.7 V)</td>
-                    </tr>
-                    <tr>
-                        <td>05-23-2013</td>
-                        <td>23:44:11</td>
-                        <td>3.5 s</td>
-                        <td>ABCD-EF01-2345-6789 (Office)</td>
-                        <td>
-                            <a class="btn btn-block btn-inverse btn-mini">Device</a>
-                        </td>
-                        <td>Out of Memory</td>
-                    </tr>
-                    <tr>
-                        <td>05-21-2013</td>
-                        <td>10:00:00</td>
-                        <td>3 days</td>
-                        <td>0123-4567-89AB-CDEF (Office)</td>
-                        <td>
-                            <a class="btn btn-block btn-danger btn-mini">Voltage</a>
-                        </td>
-                        <td>225.0 V (+5 V)</td>
-                    </tr>
+                    @for(alert <- alerts) {
+                      <tr>
+                        <td>@alert.getDevice.getDeviceId</td>
+                        <td>@alert.getDevice.getDescription</td>
+                        <td>@alert.getAlertType</td>
+                        <td>@alert.getTimestamp</td>
+                        <td>@alert.getAlertDuration</td>
+                        <td>@alert.getAlertValue</td>
+                      </tr>
+                    }
                 </tbody>
             </table>
         </div>
